src/styles/header.module.css
.header {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1000;
}

.header_inner {
    padding: var(--safe-zone);
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: var(--header);
    z-index: 100;
    max-width: 1600px;
    margin: 0 auto;
}

.logo {
    font-weight: 700;
    font-size: 25px;
    line-height: 25px;
    transition: all 0.2s ease-in-out;
    color: var(--h-color);
}

.logo:hover {
    text-decoration: none;
    color: var(--p-color);
}

.nav {
    display: flex;
    gap: 20px;
    align-items: center;
}

